// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultTimeHeaderCell correctly applies the theme context className 1`] = `
<th
  className="clinical-result-time-header-cell padding-compact orion-fusion-theme"
>
  <time
    className="date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;

exports[`ResultTimeHeaderCell paddingStyle - should render with compact 1`] = `
<th
  className="clinical-result-time-header-cell padding-compact"
>
  <time
    className="date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;

exports[`ResultTimeHeaderCell paddingStyle - should render with none 1`] = `
<th
  className="clinical-result-time-header-cell"
>
  <time
    className="date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;

exports[`ResultTimeHeaderCell paddingStyle - should render with standard 1`] = `
<th
  className="clinical-result-time-header-cell padding-standard"
>
  <time
    className="date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;

exports[`ResultTimeHeaderCell should hide date 1`] = `
<th
  className="clinical-result-time-header-cell padding-compact"
>
  <time
    className="date hide-date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;

exports[`ResultTimeHeaderCell should render a date and time 1`] = `
<th
  className="clinical-result-time-header-cell padding-compact"
>
  <time
    className="date"
  >
    December 31st 1999
  </time>
  <time
    className="time"
  >
    10:00 PM
  </time>
</th>
`;
